# etas

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE-MIT  README.md
crates/etas_cli/: Cargo.toml
crates/etas_cli/src/: error.rs  exit.rs  lib.rs  main.rs
crates/etas_cli/src/args/: check.rs  dump.rs  global.rs  graph.rs  lsp.rs  mod.rs  pkg.rs  repl.rs  run.rs  watch.rs
crates/etas_cli/src/command/: check.rs  dump_air.rs  dump_ast.rs  dump_hir.rs  effects.rs  frontend.rs  graph.rs  interpreter.rs  lsp.rs  mod.rs  pkg.rs  policy.rs  repl.rs  replay.rs  resume.rs  run.rs  watch.rs
crates/etas_cli/src/command/interpreter/: checkpoint.rs  compile.rs  diagnostics.rs  host.rs  host_config.rs  host_tool.rs
crates/etas_cli/src/config/: discovery.rs  file.rs  mod.rs
crates/etas_cli/src/output/: diagnostic.rs  graph.rs  json.rs  mod.rs  text.rs
crates/etas_cli/src/workspace/: files.rs  input.rs  mod.rs
crates/etas_cli/tests/: cli.rs
crates/etas_driver/: Cargo.toml
crates/etas_driver/src/: compile.rs  diagnostics.rs  lib.rs  package_env.rs  pkg.rs  project_discovery.rs  runtime_source.rs  source.rs
crates/etas_package/: Cargo.toml
crates/etas_package/src/: diagnostics.rs  file_lock.rs  lib.rs  pack.rs
crates/etas_package/src/lockfile/: mod.rs
crates/etas_package/src/manifest/: mod.rs
crates/etas_package/src/metadata/: builtin.rs  mod.rs  model.rs
crates/etas_package/src/metadata_artifact/: checksum.rs  container.rs  convert.rs  encode.rs  fixture.rs  header.rs  mod.rs
crates/etas_package/src/resolver/: entry.rs  environment.rs  lock.rs  lock_policy.rs  materialize.rs  mod.rs  source.rs  version.rs
crates/etas_package/src/source/: archive.rs  config.rs  git.rs  git_client.rs  github.rs  github_release.rs  http.rs  local_registry.rs  mod.rs  path.rs  provider.rs
crates/etas_package/src/store/: mod.rs
crates/etas_tests/: Cargo.toml  README.md
crates/etas_tests/fixtures/cli/positive/: check_ok.es  dump_pipeline.es
crates/etas_tests/fixtures/compiler/algorithms/negative/: bfs_missing_visited_check.diagnostics.txt  bfs_missing_visited_check.es  binary_search_bool_index.diagnostics.txt  binary_search_bool_index.es  dijkstra_cost_type_mismatch.diagnostics.txt  dijkstra_cost_type_mismatch.es  fibonacci_inconsistent_return.es  gcd_string_modulo.diagnostics.txt  gcd_string_modulo.es  knapsack_missing_field.diagnostics.txt  knapsack_missing_field.es  lcs_char_int_compare.es  merge_sort_wrong_return.es  quick_sort_missing_limit.diagnostics.txt  quick_sort_missing_limit.es  sieve_unresolved_helper.diagnostics.txt  sieve_unresolved_helper.es
crates/etas_tests/fixtures/compiler/algorithms/positive/: best_time_stock.es  best_time_stock.io.txt  bfs_shortest_path.es  bfs_shortest_path.io.txt  binary_search.es  binary_search.io.txt  climbing_stairs.es  climbing_stairs.io.txt  coin_change.es  coin_change.io.txt  container_with_most_water.es  container_with_most_water.io.txt  course_schedule.es  course_schedule.io.txt  dijkstra_shortest_path.es  dijkstra_shortest_path.io.txt  fibonacci_dp.es  fibonacci_dp.io.txt  gcd_euclid.es  gcd_euclid.io.txt  house_robber.es  house_robber.io.txt  knapsack_01.es  knapsack_01.io.txt  longest_common_subsequence.es  longest_common_subsequence.io.txt  longest_increasing_subsequence.es  longest_increasing_subsequence.io.txt  maximum_subarray.es  maximum_subarray.io.txt  merge_intervals.es  merge_intervals.io.txt  merge_sort.es  merge_sort.io.txt  move_zeroes.es  move_zeroes.io.txt  number_of_islands.es  number_of_islands.io.txt  palindrome_number.es  palindrome_number.io.txt  (+20 more)
crates/etas_tests/fixtures/compiler/effects/negative/: approval_errors_043.es  approval_errors_044.es  approval_errors_045.es  approval_errors_046.es  approval_errors_047.es  approval_errors_048.es  approval_errors_049.es  approval_errors_050.es  approval_errors_051.es  approval_errors_052.es  command_sandbox_errors_053.es  command_sandbox_errors_054.es  command_sandbox_errors_055.es  command_sandbox_errors_056.es  command_sandbox_errors_057.es  command_sandbox_errors_058.es  command_sandbox_errors_059.es  command_sandbox_errors_060.es  diagnostic_quality_087.es  diagnostic_quality_088.es  diagnostic_quality_089.es  diagnostic_quality_090.es  diagnostic_quality_091.es  diagnostic_quality_092.es  effect_row_escape_extra_093.es  effect_row_escape_extra_094.es  effect_row_escape_extra_095.es  effect_row_escape_extra_096.diagnostics.txt  effect_row_escape_extra_096.es  effect_row_escape_extra_097.es  effect_row_escape_extra_098.es  effect_row_escape_extra_099.es  handler_errors_023.es  handler_errors_024.es  handler_errors_025.es  handler_errors_026.es  handler_errors_027.es  handler_errors_028.es  handler_errors_029.es  handler_errors_030.es  (+64 more)
crates/etas_tests/fixtures/compiler/effects/positive/: approval_041.es  approval_042.es  approval_043.es  approval_044.es  (+95 more)
crates/etas_tests/fixtures/compiler/std_conformance/: matrix.csv
crates/etas_tests/fixtures/compiler/support/: algorithms.es
crates/etas_tests/fixtures/hir/golden/: phase0_minimal.hir.txt
crates/etas_tests/fixtures/hir/negative/: name_unresolved_pipeline_stage.es
crates/etas_tests/fixtures/hir/positive/: phase0_agent_effect_contract.es
crates/etas_tests/src/: lib.rs
crates/etas_tests/tests/: cli_boundary.rs  compiler_algorithms.rs  compiler_effect_policy.rs  compiler_functional.rs  compiler_handlers.rs  compiler_incremental_fixtures.rs  compiler_projects.rs  compiler_std_conformance.rs  compiler_type_system.rs  fixture_layout.rs  hir_boundary.rs  syntax_boundary.rs
crates/etas_tests/tests/support/: mod.rs
(+572 files in other folders)
