[package]
name = "etas_package"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
etas_package_metadata.workspace = true
etas_std.workspace = true
blake3.workspace = true
prost = "0.13"
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
zstd = "0.13"

[features]
default = []
test-support = []
